@@ -76,10 +76,9 @@ int main()
   auto V = std::make_shared<HyperElasticity::FunctionSpace>(mesh);
 
   // Create Dirichlet boundary conditions
-  auto V0 = std::make_shared<SubSpace>(*V, 0);
   auto zero = std::make_shared<Constant>(0.0);
   auto s = std::make_shared<SymmetryLine>();
-  auto bc = std::make_shared<DirichletBC>(V0, zero, s, "pointwise");
+  auto bc = std::make_shared<DirichletBC>(V->sub(0), zero, s, "pointwise");
 
   // Define source and boundary traction functions
   Constant B(0.0, -0.05);
